# fragmentationmodel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: styling.yml
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  fragmentationmodel.rst  fragmodel.rst  index.rst  modules.rst
docs/source/notebooks/: Chelyabinsk MCMC.ipynb  Chelyabinsk.ipynb
examples/: Chelyabinsk MCMC.ipynb  Chelyabinsk.ipynb  J19 MCMC.ipynb  J19.ipynb  J19_Comet.json  J23 MCMC.ipynb  J23.ipynb  J23_Comet.json
examples/earthtp/: chelyabinsk.tp  chelyabinsk_50k.tp  chelyabinsk_tz.csv
examples/energydep/: lightcurve_fragN.csv
examples/juptp/: jupiter.tp  rhoTP.py
examples/lightcurves/: lightcurve_hueso.csv  lightcurve_new2.csv
fragmentationmodel/: __init__.py  energy.py  fragment.py  fragmentation_model.py  planet.py  solver.py  state.py
fragmodel/: __init__.py  energy.py  frag_funcs.py  fragment.py  fragmentation_model.py  planet.py  solver.py  state.py
tests/: lightcurve_hueso.csv  run_all_sankar2020.py  run_test_av2014.py
tests/earthtp/: earth.tp
